feat: multiple post improvements
- more posts label
- high res thumbnail
- pagination button bigger
- clickable event card
- 9 articles per page
- default event post author
- event post source

--- a/themes/custom-blist/i18n/fr.yaml
+++ b/themes/custom-blist/i18n/fr.yaml
@@ -10,7 +10,7 @@
 - id: readMore
   translation: "Lire plus"
 - id: morePosts
-  translation: "Plus de billets"
+  translation: "Articles pouvant vous intéresser"
 - id: olderPosts
   translation: "Anciens billets"
 - id: newerPosts
